deploy/k8s/deployment.yaml
# Generated by IBM Migration Artifacts Bundler
# Mon Nov 25 12:16:27 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: javahelloworldappwar
  name: javahelloworldappwar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: javahelloworldappwar
  template:
    metadata:
      labels:
        app: javahelloworldappwar
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: javahelloworldappwar
          ports:
            - containerPort: 9080
              protocol: TCP
