deploy/k8s/service.yaml
# Generated by IBM Migration Artifacts Bundler
# Mon Nov 25 12:16:27 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: javahelloworldappwar
  name: javahelloworldappwar
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: javahelloworldappwar
