deploy/k8s/route.yaml
# Generated by IBM Migration Artifacts Bundler
# Mon Nov 25 12:16:27 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: javahelloworldappwar
  name: javahelloworldappwar
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: javahelloworldappwar
    weight: 100
